--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-52261332-1', 'dogdaytraining.com.au');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
 </head>
