--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,11 @@
-<nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; background: white;">
   <div class="container-fluid container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Good Dog Day Training</a>
+      <a class="navbar-brand" href="/">
+        <%= image_tag("Website-Logo-90x90.png") %>
+        <span>Good Dog Day Training</span>
+      </a>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
@@ -15,7 +18,7 @@
 </nav>
 
 <div class="jumbotron" style="min-height: 500px;">
-  <h2 style="color: white; text-align: center; margin-top: 300px; text-shadow: 0 0 10px black;">
+  <h2 style="color: white; text-align: center; margin-top: 300px; text-shadow: 0 0 10px black; font-size: 44px;">
     Come home to a happy, well behaved dog
   </h2>
 </div>
