--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,14 @@
 
 <section class="main-section">
   <div class="container">
+    <div class="col-md-6" style="text-align: center">
+      <%= image_tag "training.jpg", style: "width: 100%" %>
+      <h2>Day Training</h2>
+    </div>
+    <div class="col-md-6" style="text-align: center">
+      <%= image_tag "walking.jpg", style: "width: 100%" %>
+      <h2>Dog Walking</h2>
+    </div>
 
     <p class="lead">
       Good Dog Day Training offers dog walking and day training in Melbourne’s South-Eastern suburbs, so life with your best friend is as fun and easy as it should be.
