--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "non-responsive";
 
 .jumbotron {
   background: white image-url("dog1.jpg") no-repeat center center;
@@ -11,25 +12,21 @@
   padding: 30px 0 50px;
 }
 
-.navbar-nav > li > a {
-  padding-top: 48px;
-  padding-bottom: 48px;
+.navbar-nav {
+  border-top: 3px solid green;
+  border-bottom: 3px solid green;
+}
+
+.navbar-nav > li {
+  padding: 0 10px;
+  border-right: 1px solid red;
+}
+
+.navbar-nav > li:first-child {
+  border-left: 1px solid red;
 }
 
 h1, h2, h3, h4, h5 {
   font-family: "Francois One", sans-serif;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  min-width: 400px;
-}
-
-.navbar-brand span {
-  font-family: "Francois One", sans-serif;
-  font-size: 30px;
-  color: #1c72a0;
-  vertical-align: middle;
-  padding: 0 20px;
 }
 
