--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,17 +13,15 @@
 }
 
 .navbar-nav {
-  border-top: 3px solid green;
-  border-bottom: 3px solid green;
+  border-top: none;
+  text-align: center;
 }
 
 .navbar-nav > li {
+  float: none;
+  display: table-cell;
+  width: 1%;
   padding: 0 10px;
-  border-right: 1px solid red;
-}
-
-.navbar-nav > li:first-child {
-  border-left: 1px solid red;
 }
 
 h1, h2, h3, h4, h5 {
