--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,6 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Francois+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; background: white;">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="row" style="height: 120px">
@@ -34,18 +33,19 @@
         <div><a href="mailto:steph@dogdaytraining.com.au">steph@dogdaytraining.com.au</a></div>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <ul class="nav navbar-nav">
+  <div class="container">
+    <nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; display: table; border-radius: 5px 5px 0 0;">
+      <ul class="nav navbar-nav" style="display: table-row; width: 100%;">
         <li><%= link_to "Home", :home_page %></li>
         <li><%= link_to "Day Training", :training_page %></li>
         <li><%= link_to "Dog Training", :walking_page %></li>
         <li><%= link_to "Meet the Trainer", :trainer_page %></li>
         <li><%= link_to "Contact Us", :contact_page %></li>
       </ul>
-    </div>
+    </nav>
   </div>
-</nav>
 
 
 <%= yield %>
