--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,16 +21,18 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="row" style="height: 120px">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">
-          <%= image_tag("Website-Logo.png") %>
-        </a>
-      </div>
+      <div class="col-xs-12">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">
+            <%= image_tag("Website-Logo.png") %>
+          </a>
+        </div>
 
-      <div class="pull-right" style="padding: 30px 0; text-align: right;">
-        <div style="font-size: 130%;"><a href="tel:0432768076">0432768076</a></div>
-        <div>Stephanie Shaw</div>
-        <div><a href="mailto:steph@dogdaytraining.com.au">steph@dogdaytraining.com.au</a></div>
+        <div class="pull-right" style="padding: 30px 0; text-align: right;">
+          <div style="font-size: 130%;"><a href="tel:0432768076">0432768076</a></div>
+          <div>Stephanie Shaw</div>
+          <div><a href="mailto:steph@dogdaytraining.com.au">steph@dogdaytraining.com.au</a></div>
+        </div>
       </div>
     </div>
   </div>
