--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="jumbotron" style="min-height: 500px; border-radius: 0 0 5px 5px;">
-    <h2 style="color: white; text-align: center; margin-top: 300px; text-shadow: 0 0 10px black; font-size: 44px;">
-      Come home to a happy, well behaved dog
+    <h2 style="color: white; text-align: center; margin-top: 300px; text-shadow: 0 0 10px black; font-size: 44px; line-height: 55px;">
+      Come home to a happy,<br/>well behaved dog
     </h2>
   </div>
 </div>
