--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,11 @@
   display: table-cell;
   width: 1%;
   padding: 0 10px;
+  border-right: 1px solid rgba(0,0,0,0.1);
+}
+
+.navbar-nav > li:last-child {
+  border-right: none;
 }
 
 h1, h2, h3, h4, h5 {
