--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       <ul class="nav navbar-nav" style="display: table-row; width: 100%;">
         <li><%= link_to "Home", :home_page %></li>
         <li><%= link_to "Day Training", :training_page %></li>
-        <li><%= link_to "Dog Training", :walking_page %></li>
+        <li><%= link_to "Dog Walking", :walking_page %></li>
         <li><%= link_to "Meet the Trainer", :trainer_page %></li>
         <li><%= link_to "Contact Us", :contact_page %></li>
       </ul>
