--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
   </div>
 
   <div class="container">
-    <nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; display: table; border-radius: 5px 5px 0 0;">
+    <nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; display: table; border-radius: 5px 5px 0 0; width: 100%;">
       <ul class="nav navbar-nav" style="display: table-row; width: 100%;">
         <li><%= link_to "Home", :home_page %></li>
         <li><%= link_to "Day Training", :training_page %></li>
