Actually space the number out now

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,7 +4,7 @@
     <addr></addr>
     <address>
       <strong>Stephanie Shaw</strong><br />
-      <a href="tel:0432 768 076">0432768076</a><br />
+      <a href="tel:0432768076">0432 768 076</a><br />
       <a href="mailto:steph@dogdaytraining.com.au">steph@dogdaytraining.com.au</a>
     </address>
   </div>
