--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         </div>
 
         <div class="pull-right" style="padding: 30px 0; text-align: right;">
-          <div style="font-size: 130%;"><a href="tel:0432 768 076">0432768076</a></div>
+          <div style="font-size: 130%;"><a href="tel:0432768076">0432 768 076</a></div>
           <div>Stephanie Shaw</div>
           <div><a href="mailto:steph@dogdaytraining.com.au">steph@dogdaytraining.com.au</a></div>
         </div>
