training -> day_training

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0; display: table; border-radius: 5px 5px 0 0; width: 100%;">
       <ul class="nav navbar-nav" style="display: table-row; width: 100%;">
         <li><%= link_to "Home", :home_page %></li>
-        <li><%= link_to "Day Training", :training_page %></li>
+        <li><%= link_to "Day Training", :day_training_page %></li>
         <li><%= link_to "Dog Walking", :walking_page %></li>
         <li><%= link_to "Meet the Trainer", :trainer_page %></li>
         <li><%= link_to "Contact Us", :contact_page %></li>
