--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6" style="text-align: center">
-        <a href="<%= training_page_url %>" style="display: block;">
-          <%= image_tag "training.jpg", style: "width: 100%" %>
+        <a href="<%= day_training_page_url %>" style="display: block;">
+          <%= image_tag "day_training.jpg", style: "width: 100%" %>
           <h2>Day Training</h2>
         </a>
       </div>
