--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,12 +21,15 @@
   float: none;
   display: table-cell;
   width: 1%;
-  padding: 0 10px;
   border-right: 1px solid rgba(0,0,0,0.1);
 }
 
 .navbar-nav > li:last-child {
   border-right: none;
+}
+
+.navbar {
+  min-height: inherit;
 }
 
 h1, h2, h3, h4, h5 {
