--- a/app/assets/stylesheets/non-responsive.css.scss
+++ b/app/assets/stylesheets/non-responsive.css.scss
@@ -35,16 +35,6 @@ body {
   max-width: none !important;
 }
 
-/* Demonstrate the grids */
-.col-xs-4 {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background-color: #eee;
-  background-color: rgba(86,61,124,.15);
-  border: 1px solid #ddd;
-  border: 1px solid rgba(86,61,124,.2);
-}
-
 .container .navbar-header,
 .container .navbar-collapse {
   margin-right: 0;
@@ -84,7 +74,7 @@ body {
   float: left;
 }
 .navbar-nav > li > a {
-  padding: 15px;
+  padding: 10px 15px;
 }
 
 /* Redeclare since we override the float above */
