Meet the trainer

--- a/app/views/pages/trainer.html.erb
+++ b/app/views/pages/trainer.html.erb
@@ -1,12 +1,22 @@
 <section class="main-section" id="meet">
   <div class="container">
     <h1>Meet the Trainer</h1>
-    <p>
-      <ul>
-        <li>Certificate IV in Companion Animal Services through the Delta Society</li>
-        <li>Completed instructor training courses for The Gentle Dog Trainers Association and Southside Dog School</li>
-      </ul>
-      Before launching her career in behaviour consulting and dog walking, Stephanie had extensive experience in a variety of jobs such as working at vet clinics and kennels, volunteering for the RSPCA, work experience with the detector dog program and veterinary behaviorists, and instructing obedience classes, puppy schools and reactive dog classes. She is dedicated to attending several seminars and workshops every year and stays up to date with all industry literature so that she can provide the most effective, modern and convenient dog training solutions for her clients. When she is not helping clients to enjoy easier lives with their pets she enjoys training her own two dogs, who have many titles in agility and rally obedience.
-    </p>
+    <div class="row">
+      <div class="col-xs-6">
+        <p>
+          <ul>
+            <li>Certificate IV in Companion Animal Services through the Delta Society</li>
+            <li>Completed instructor training courses for The Gentle Dog Trainers Association and Southside Dog School</li>
+          </ul>
+        </p>
+        <p>Before launching her career in behaviour consulting and dog walking, Stephanie had extensive experience in a variety of jobs such as working at vet clinics and kennels, volunteering for the RSPCA, work experience with the detector dog program and veterinary behaviorists.</p>
+        <p>Stephanie has taught dog classes for many years, including puppy classes and reactive dog classes.</p>
+        <p>She is dedicated to attending several seminars and workshops every year and stays up to date with all industry literature so that she can provide the most effective, modern and convenient dog training solutions for her clients.</p>
+        <p>When she is not helping clients to enjoy easier lives with their pets she enjoys training her own two dogs, who have many titles in agility and rally obedience.</p>
+      </div>
+      <div class="col-xs-6">
+        <%= image_tag "steph.jpg", style: "width: 100%" %>
+      </div>
+    </div>
   </div>
 </section>
